# auth

./: .gitignore  Makefile  pyproject.toml  redis_test.py
app/: _init_db.py  config.py  init_db.py  main.py
app/entities/: auth.py
app/exceptions/: __init__.py  auth.py  group.py  handlers.py  scope.py  user.py
app/handlers/: __init__.py
app/middlewares/: trace.py
app/repositories/: __init__.py  email_code.py  group.py  relation.py  scope.py  token.py  user.py
app/routers/: api.py  user.py
app/routers/api/: __init__.py  user.py
app/routers/api/admin/: __init__.py  group.py  relation.py  scope.py  user.py
app/schemas/: __init__.py  admin.py  auth.py  token.py  user.py
app/services/: __init__.py  auth.py  email.py  email_code.py  scope.py  token.py  user.py
app/utils/: __init__.py  _init_db.py  database.py  db.py  log.py  redis.py
configs/: .env  config.yml
docker/: compose.yml
fd/: .env  .env.example  README.md  biome.json  index.html  package.json  vite.config.ts
fd/src/: App.tsx  index.css  main.tsx
fd/src/api/: admin.ts  auth.ts  client.ts  user.ts
fd/src/lib/: error.ts  validation.ts
fd/src/pages/Admin/: index.tsx
fd/src/pages/ForgetPassword/: index.tsx
fd/src/pages/Login/: index.tsx
fd/src/pages/NotFound/: index.tsx
fd/src/pages/Profile/: index.tsx
fd/src/pages/Register/: index.tsx
fd/src/router/: guards.tsx  index.tsx
fd/src/stores/: authStore.ts
fd/src/types/: index.ts
sql/: auth.sql
sql/mysql/: auth.sql
sql/sqlite/: auth.sql
tests/: conftest.py  test_admin.py  test_auth.py
(+4 files in other folders)
