[project]
name = "auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib>=5.1.0",
    "aiosqlite>=0.22.1",
    "asyncmy>=0.2.11",
    "fastapi[standard]>=0.128.0",
    "loguru>=0.7.3",
    "omegaconf>=2.3.0",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.11.0",
    "pymysql>=1.1.2",
    "rich>=14.3.2",
    "sqlacodegen>=3.2.0",
    "sqlalchemy>=2.0.46",
]

[dependency-groups]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-cov>=4.0.0",
    "faker>=40.1.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = ["-v", "--tb=short", "--strict-markers"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
